--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
+allure-report
+allure-results
 
 # nyc test coverage
 .nyc_output
